feat: add page styles for board container and responsive design

--- a/app/board/styles/page.css
+++ b/app/board/styles/page.css
@@ -1,4 +1,4 @@
-@import '../globals.css';
+@import '../../globals.css';
 @import url('https://fonts.googleapis.com/css2?family=Sofia-Sans&display=swap');
 
 .board-container-wrapper {
