--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@
   --dark-tile: #4d0705;
   --bg-color: #202020;
   --highlight: rgba(255, 0, 0, 0.13);
-  --check: #feec48;
+  --check: #ff0000;
   --kimono-200: #a04741;
   --kimono-700: #914b43;
   --kimono-900: #873d3a;
