--- a/app/game/styles/moves-list.css
+++ b/app/game/styles/moves-list.css
@@ -8,7 +8,11 @@
     width: 100%;
     max-width: 100%;
     font-weight: bold;
+    height: 100%;
+    border-radius: 10px;
+    padding: 10px;
 }
+
 
 @media (max-width: 768px) {
     .moves-list {
@@ -39,9 +43,9 @@
 }
 
 .moves-list .white-move {
-    padding-left: 4px;
+    text-align: center;
 }
 
 .moves-list .black-move {
-    padding-left: 4px;
+    text-align: center;
 }
