--- a/app/game/styles/control.css
+++ b/app/game/styles/control.css
@@ -1,24 +1,37 @@
 .control {
     display: flex;
     flex-direction: column;
-    padding: 10px;
     text-align: center;
-    height: calc(8 * var(--tile-size));
-    width: 240px;
-    min-width: 240px;
-}
+    height: 100%;
+    width: 18vw;
+    min-width: 18vw;
+    position: absolute;
+    left: 100%;
+    top: 50%;
+    transform: translateY(-50%);
+    background-color: var(--bone-400);
+    border: 2px solid var(--kimono-900);
+    border-radius: 10px;
+    box-sizing: border-box;
+    margin-left: 5rem;
+    opacity: 0.85;
+    }
 
 .control-title {
     color: var(--dark-tile);
     font-size: 1.6em;
     font-weight: bold;
-    margin: 0 0 15px 0;
+    margin: 10px 0 15px 0;
     padding-bottom: 10px;
     border-bottom: 2px solid rgba(0, 0, 0, 0.1);
 }
 
 @media (max-width: 768px) {
     .control {
+        position: static;
+        left: auto;
+        top: auto;
+        transform: none;
         width: 100%;
         min-width: 100%;
         height: auto;
@@ -34,8 +47,9 @@
         height: auto;
         max-height: 180px;
         margin-top: 15px;
+        margin-left: 0;
     }
-    
+
     .control-title {
         font-size: 1.3em;
         margin-bottom: 10px;
